gst-docs: add return value to appsink callback in tutorial and example code

The "crude waveform generator" sample application in "Basic
tutorial 8: Short-cutting the pipeline" was lacking the return value
so it was only being invoked once.

https://bugzilla.gnome.org/show_bug.cgi?id=796476